Changelog:

3.21
- Went through all addon files and cleaned up old/unused code.
- Removed the 3.15 warning from the about page.
- Fixed lua errors happening if RXP or Questie addons aren't installed/enabled, when tbcprep checks if their quest automation is on.
- Companion: Fixed 'Bank Collect' not working if you didn't have room in the main backpack.

3.20 (2026-01-26)
- Profession requirements on quests should now work on non-english (enUS) wow clients. Please let us know if it doesn't work
- TBCPrep now turns off RXP & Questie quest automation 10 seconds after logging in / reloading. Can be disabled in the '/tbcprep' settings tab
- TBCprep now warns if RXP/Questie quest automation is enabled every 10 minutes in chat. Can be disabled in the '/tbcprep' settings tab
- It didn't seem possible to disable LeatrixPlus automation from our addon. Please turn it off yourself.
- Companion: 'Collect' button for 'Bags' step should now work when using the bank button to open the companion
- Implemented more of the RXP Guide for the Solo Route (not finished)

3.19 (2026-01-25) 
- Eitrigg's Wisdom (part of Onyxia attunement) should no longer show a warning when picked up.
- "Fel Elemental Rod" for the T0.5 questline is now marked correctly as BoE (Can be mailed and bought on AH).
- Companion: Added 'Collect' button the the 'Bags' steps, so you can quickly loot the items from the bank.
- Companion: T0.5 Class belt & gloves are now set to always be in bags, so players that have equipped them doesn't get griefed on release since they can't mail them.
- Companion: No longer only loots 1 stack after the prepatch.
- Companion: Companion now tries to update the itemlist after collecting, not only after closing the mail/bank. If the mailbox lags it might not work, just close the mail/bank to get a fresh update.
- Added description of a way to use the companion without relying on our mail-loot logic on release. The servers might be lagging and we can't guarantee how well it works.